tests/ui/borrowck/borrow-raw-address-of-borrowed.stderr
error[E0502]: cannot borrow `x` as mutable because it is also borrowed as immutable
  --> $DIR/borrow-raw-address-of-borrowed.rs:5:13
   |
LL |     let y = &x;
   |             -- immutable borrow occurs here
LL |
LL |     let q = &raw mut x;
   |             ^^^^^^^^^^ mutable borrow occurs here
LL |
LL |     drop(y);
   |          - immutable borrow later used here

error[E0502]: cannot borrow `x` as immutable because it is also borrowed as mutable
  --> $DIR/borrow-raw-address-of-borrowed.rs:14:13
   |
LL |     let y = &mut x;
   |             ------ mutable borrow occurs here
LL |
LL |     let p = &raw const x;
   |             ^^^^^^^^^^^^ immutable borrow occurs here
...
LL |     drop(y);
   |          - mutable borrow later used here

error[E0499]: cannot borrow `x` as mutable more than once at a time
  --> $DIR/borrow-raw-address-of-borrowed.rs:15:13
   |
LL |     let y = &mut x;
   |             ------ first mutable borrow occurs here
...
LL |     let q = &raw mut x;
   |             ^^^^^^^^^^ second mutable borrow occurs here
LL |
LL |     drop(y);
   |          - first borrow later used here

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0499, E0502.
For more information about an error, try `rustc --explain E0499`.
